@@ -11,6 +11,7 @@
    @author Ustun Ergenoglu <ext-ustun.ergenoglu@nokia.com>
    @author Matias Muhonen <ext-matias.muhonen@nokia.com>
    @author Tapio Rantala <ext-tapio.rantala@nokia.com>
+   @author Lihan Guo <ext-lihan.4.guo@nokia.com>
 
    This file is part of Sensord.
 
@@ -39,9 +40,11 @@
 #include "datatypes/utils.h"
 #include <stdlib.h>
 #include <linux/types.h>
+#include <string.h>
 
 ALSAdaptorAscii::ALSAdaptorAscii(const QString& id) : SysfsAdaptor(id, SysfsAdaptor::IntervalMode)
 {
+    memset(buf, 0x0, 16);
     const unsigned int DEFAULT_RANGE = 65535;
 
     int range = DEFAULT_RANGE;
